lots of changes here and there. One of the major change was to find a way to wrap the status of the data like LOADING, SUCCESS AND FAILURE and also being able to reference a string resource in the viewModels using the same wrapper class for it; i later got a hack around it. Another major change was introducing NewsRepositoryImpl class to implement NewsRepository functions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">NewsApp</string>
+
+    <string name="err_http_error">Something went wrong, Please try again</string>
+    <string name="err_check_internet_connection">Please check your internet connection and try again</string>
+    <string name="err_no_internet">No Internet Connection</string>
+    <string name="general_exception">Something went wrong</string>
+    <string name="err_network_failure">Network Failure</string>
+    <string name="deleted_successfully">Deleted Successfully</string>
+    <string name="saved_successfully">Saved Successfully</string>
+
 </resources>
