--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="err_network_failure">Network Failure</string>
     <string name="deleted_successfully">Deleted Successfully</string>
     <string name="saved_successfully">Saved Successfully</string>
+    <string name="breaking_news">Breaking News</string>
+    <string name="search_news">Search News</string>
+    <string name="saved_news">Saved News</string>
 
 </resources>
